--- a/API/config.env
+++ b/API/config.env
@@ -1,4 +1,5 @@
 NODE_ENV = development
 PORT = 2450
-USER = TEST_USER
-PASSWORD = 13579
+USER = gabrielnrbeiro
+PASSWORD = YYW4Vc12Q9YrEoEA
+CONNECTIONSTRING = mongodb+srv://gabrielnrbeiro:<password>@lab-report.ya2ca0q.mongodb.net/
