Edited db connection

--- a/API/config.env
+++ b/API/config.env
@@ -1,5 +1,6 @@
 NODE_ENV = development
 PORT = 2450
 USER = gabrielnrbeiro
-PASSWORD = YYW4Vc12Q9YrEoEA
-CONNECTIONSTRING = mongodb+srv://gabrielnrbeiro:<password>@lab-report.ya2ca0q.mongodb.net/
+DATABASE_PASSWORD = YYW4Vc12Q9YrEoEA
+DATABASE = mongodb+srv://gabrielnrbeiro:<PASSWORD>@lab-report.ya2ca0q.mongodb.net/?retryWrites=true&w=majority
+DATABASE_LOCAL = mongodb://localhost:27017/classrooms
